
    o motif_pvalue() with use.freq > 1 can calculate P-values from
      provided higher-order backgrounds, instead of assuming a uniform
      background

    o add_multifreq() adds corresponding higher order background probabilities
      to motifs

    o New get_klets() utility function: generate all possible k-lets for any
      set of characters.

MINOR CHANGES

    o Increased input security for character type parameters throughout

    o Expanded motif_pvalue(), scan_sequences() examples sections

    o New vignette section for motif_peaks() added to SequenceSearches.Rmd

    o Various vignette tweaks

    o Fixed various spelling mistakes throughout, added Language field to
      Description, and added spell check to tests

    o Documentation for the "random" shuffling method has been removed and a
      warning is shown when used to tell the user that it will be removed in
      the next minor update

    o Generally increased test coverage

    o The "linear" and "markov" shuffling methods are much faster

    o create_sequences() for higher order backgrounds is much faster

    o Faster add_multifreqs(): slight improvement for DNA motifs, big
      improvement for non-DNA motifs

    o sample_sites() has been rewritten for use.freq > 1: the probability of
      each letter in the site is now dependent on the previous letters (also
      faster and more memory efficient for any use.freq)

    o Huge improvement to calculating motif scores from p-value input: no
      longer guesses different scores, instead estimating a normal distribution
      of scores. This new approach is much, much faster and more memory
      efficient. It does however assume a uniform background.

    o The "score.pct" column in scan_sequences() results now represents the
      percent score based on the total possible score, not just the score
      between zero and the max possible score.

    o summarise_motifs() is much faster

BUG FIXES
