@@ -158,6 +158,8 @@ importFrom(stats,wilcox.test)
 importFrom(utils,menu)
 importFrom(utils,packageDescription)
 importFrom(utils,read.table)
+importFrom(yaml,as.yaml)
+importFrom(yaml,yaml.load)
 importMethodsFrom(methods,initialize)
 importMethodsFrom(methods,show)
 useDynLib(universalmotif)
