@@ -1,0 +1,28 @@
+# universalmotif version 1.1.67
+#
+MOTIF1:
+    name: motif
+    alphabet: DNA
+    type: PPM
+    icscore: 10.74
+    nsites: 232.0
+    pseudocount: 0.0
+    bkg:
+        A: 0.2406
+        C: 0.2525
+        G: 0.2614
+        T: 0.2455
+    consensus: GATGGGGAGS
+    strand: +-
+    motif:
+    - 5.002e-03 1.357e-01 8.071e-01 5.220e-02
+    - 9.600e-01 3.746e-03 2.937e-02 6.878e-03
+    - 3.452e-03 4.605e-02 0.000e+00 9.505e-01
+    - 2.227e-01 1.224e-01 6.548e-01 3.500e-05
+    - 1.550e-03 1.440e-04 7.143e-01 2.840e-01
+    - 1.535e-02 1.635e-01 6.231e-01 1.981e-01
+    - 1.425e-02 1.410e-01 6.145e-01 2.303e-01
+    - 9.042e-01 2.044e-02 7.282e-03 6.811e-02
+    - 2.201e-02 2.962e-01 6.817e-01 1.320e-04
+    - 6.521e-02 6.078e-01 3.270e-01 7.800e-05
+
